--- a/requirements.txt
+++ b/requirements.txt
@@ -1,241 +1,429 @@
-absl-py==2.0.0
-alabaster==0.7.13
-appdirs==1.4.4
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: osx-arm64
+absl-py=2.1.0=pypi_0
+alabaster=0.7.16=pypi_0
+applaunchservices=0.3.0=pypi_0
+appnope=0.1.4=pypi_0
+arrow=1.3.0=pypi_0
+astroid=3.0.3=pypi_0
+asttokens=2.4.1=pypi_0
+astunparse=1.6.3=pypi_0
+atomicwrites=1.4.1=pypi_0
+attrs=23.2.0=pypi_0
+audioread=3.0.1=pypi_0
+autopep8=2.0.4=pypi_0
+babel=2.14.0=pypi_0
+beautifulsoup4=4.12.3=pypi_0
+binaryornot=0.4.4=pypi_0
+black=24.2.0=pypi_0
+bleach=6.1.0=pypi_0
+bzip2=1.0.8=h80987f9_5
+ca-certificates=2023.12.12=hca03da5_0
+certifi=2024.2.2=pypi_0
+cffi=1.16.0=pypi_0
+chardet=5.2.0=pypi_0
+charset-normalizer=3.3.2=pypi_0
+click=8.1.7=pypi_0
+cloudpickle=3.0.0=pypi_0
+comm=0.2.1=pypi_0
+contourpy=1.2.0=pypi_0
+cookiecutter=2.6.0=pypi_0
+cv=1.0.0=pypi_0
+cycler=0.12.1=pypi_0
+debugpy=1.8.1=pypi_0
+decorator=5.1.1=pypi_0
+defusedxml=0.7.1=pypi_0
+diff-match-patch=20230430=pypi_0
+dill=0.3.8=pypi_0
+docstring-to-markdown=0.15=pypi_0
+docutils=0.20.1=pypi_0
+executing=2.0.1=pypi_0
+expat=2.5.0=h313beb8_0
+fastjsonschema=2.19.1=pypi_0
+filelock=3.13.1=pypi_0
+flake8=7.0.0=pypi_0
+flatbuffers=24.3.25=pypi_0
+fonttools=4.49.0=pypi_0
+fsspec=2024.2.0=pypi_0
+gast=0.5.4=pypi_0
+google-pasta=0.2.0=pypi_0
+grpcio=1.63.0=pypi_0
+h5py=3.11.0=pypi_0
+idna=3.6=pypi_0
+imagesize=1.4.1=pypi_0
+importlib-metadata=7.0.2=pypi_0
+inflection=0.5.1=pypi_0
+intervaltree=3.1.0=pypi_0
+ipykernel=6.29.3=pypi_0
+ipython=8.22.2=pypi_0
+isort=5.13.2=pypi_0
+jaraco-classes=3.3.1=pypi_0
+jedi=0.19.1=pypi_0
+jellyfish=1.0.3=pypi_0
+jinja2=3.1.3=pypi_0
+joblib=1.4.2=pypi_0
+jsonschema=4.21.1=pypi_0
+jsonschema-specifications=2023.12.1=pypi_0
+jupyter-client=8.6.1=pypi_0
+jupyter-core=5.7.2=pypi_0
+jupyterlab-pygments=0.3.0=pypi_0
+keras=3.3.3=pypi_0
+keyring=24.3.1=pypi_0
+kiwisolver=1.4.5=pypi_0
+lazy-loader=0.4=pypi_0
+libclang=18.1.1=pypi_0
+libcxx=14.0.6=h848a8c0_0
+libffi=3.4.4=hca03da5_0
+librosa=0.10.2=pypi_0
+llvmlite=0.42.0=pypi_0
+markdown=3.6=pypi_0
+markdown-it-py=3.0.0=pypi_0
+markupsafe=2.1.5=pypi_0
+matplotlib=3.8.3=pypi_0
+matplotlib-inline=0.1.6=pypi_0
+mccabe=0.7.0=pypi_0
+mdurl=0.1.2=pypi_0
+mistune=3.0.2=pypi_0
+ml-dtypes=0.3.2=pypi_0
+more-itertools=10.2.0=pypi_0
+mpmath=1.3.0=pypi_0
+msgpack=1.0.8=pypi_0
+mypy-extensions=1.0.0=pypi_0
+namex=0.0.8=pypi_0
+nbclient=0.9.0=pypi_0
+nbconvert=7.16.2=pypi_0
+nbformat=5.9.2=pypi_0
+ncurses=6.4=h313beb8_0
+nest-asyncio=1.6.0=pypi_0
+networkx=3.2.1=pypi_0
+numba=0.59.1=pypi_0
+numpy=1.26.4=pypi_0
+numpydoc=1.6.0=pypi_0
+opencv-python=4.9.0.80=pypi_0
+openssl=3.0.13=h1a28f6b_0
+opt-einsum=3.3.0=pypi_0
+optree=0.11.0=pypi_0
+packaging=24.0=pypi_0
+pandas=2.2.1=pypi_0
+pandocfilters=1.5.1=pypi_0
+parso=0.8.3=pypi_0
+pathspec=0.12.1=pypi_0
+pexpect=4.9.0=pypi_0
+pickleshare=0.7.5=pypi_0
+pillow=10.2.0=pypi_0
+pip=23.3.1=py312hca03da5_0
+platformdirs=4.2.0=pypi_0
+pluggy=1.4.0=pypi_0
+pooch=1.8.1=pypi_0
+prompt-toolkit=3.0.43=pypi_0
+protobuf=4.25.3=pypi_0
+psutil=5.9.8=pypi_0
+ptyprocess=0.7.0=pypi_0
+pure-eval=0.2.2=pypi_0
+py-cpuinfo=9.0.0=pypi_0
+pycodestyle=2.11.1=pypi_0
+pycparser=2.22=pypi_0
+pydocstyle=6.3.0=pypi_0
+pyflakes=3.2.0=pypi_0
+pygments=2.17.2=pypi_0
+pylint=3.0.4=pypi_0
+pylint-venv=3.0.3=pypi_0
+pyls-spyder=0.4.0=pypi_0
+pyobjc-core=10.1=pypi_0
+pyobjc-framework-cocoa=10.1=pypi_0
+pyobjc-framework-coreservices=10.1=pypi_0
+pyobjc-framework-fsevents=10.1=pypi_0
+pyparsing=3.1.2=pypi_0
+pyqt5=5.15.10=pypi_0
+pyqt5-qt5=5.15.12=pypi_0
+pyqt5-sip=12.13.0=pypi_0
+pyqtwebengine=5.15.6=pypi_0
+pyqtwebengine-qt5=5.15.12=pypi_0
+python=3.12.2=h99e199e_0
+python-dateutil=2.9.0.post0=pypi_0
+python-lsp-black=2.0.0=pypi_0
+python-lsp-jsonrpc=1.1.2=pypi_0
+python-lsp-server=1.10.0=pypi_0
+python-slugify=8.0.4=pypi_0
+pytoolconfig=1.3.1=pypi_0
+pytz=2024.1=pypi_0
+pyyaml=6.0.1=pypi_0
+pyzmq=25.1.2=pypi_0
+qdarkstyle=3.2.3=pypi_0
+qstylizer=0.2.2=pypi_0
+qtawesome=1.3.0=pypi_0
+qtconsole=5.5.1=pypi_0
+qtpy=2.4.1=pypi_0
+readline=8.2=h1a28f6b_0
+referencing=0.33.0=pypi_0
+requests=2.31.0=pypi_0
+rich=13.7.1=pypi_0
+rope=1.12.0=pypi_0
+rpds-py=0.18.0=pypi_0
+rtree=1.2.0=pypi_0
+scikit-learn=1.4.2=pypi_0
+scipy=1.12.0=pypi_0
+seaborn=0.13.2=pypi_0
+setuptools=68.2.2=py312hca03da5_0
+six=1.16.0=pypi_0
+snowballstemmer=2.2.0=pypi_0
+sortedcontainers=2.4.0=pypi_0
+soundfile=0.12.1=pypi_0
+soupsieve=2.5=pypi_0
+soxr=0.3.7=pypi_0
+sphinx=7.2.6=pypi_0
+sphinxcontrib-applehelp=1.0.8=pypi_0
+sphinxcontrib-devhelp=1.0.6=pypi_0
+sphinxcontrib-htmlhelp=2.0.5=pypi_0
+sphinxcontrib-jsmath=1.0.1=pypi_0
+sphinxcontrib-qthelp=1.0.7=pypi_0
+sphinxcontrib-serializinghtml=1.1.10=pypi_0
+spyder=5.5.1=pypi_0
+spyder-kernels=2.5.1=pypi_0
+sqlite=3.41.2=h80987f9_0
+stack-data=0.6.3=pypi_0
+sympy=1.12=pypi_0
+tabulate=0.9.0=pypi_0
+tensorboard=2.16.2=pypi_0
+tensorboard-data-server=0.7.2=pypi_0
+tensorflow=2.16.1=pypi_0
+termcolor=2.4.0=pypi_0
+text-unidecode=1.3=pypi_0
+textdistance=4.6.1=pypi_0
+thop=0.1.1-2209072238=pypi_0
+threadpoolctl=3.5.0=pypi_0
+three-merge=0.1.1=pypi_0
+tinycss2=1.2.1=pypi_0
+tk=8.6.12=hb8d0fd4_0
+tomli=2.0.1=pypi_0
+tomlkit=0.12.4=pypi_0
+torch=2.2.1=pypi_0
+torchvision=0.17.1=pypi_0
+tornado=6.4=pypi_0
+tqdm=4.66.2=pypi_0
+traitlets=5.14.2=pypi_0
+types-python-dateutil=2.8.19.20240311=pypi_0
+typing-extensions=4.10.0=pypi_0
+tzdata=2024.1=pypi_0
+ujson=5.9.0=pypi_0
+ultralytics=8.1.27=pypi_0
+urllib3=2.2.1=pypi_0
+watchdog=4.0.0=pypi_0
+wcwidth=0.2.13=pypi_0
+webencodings=0.5.1=pypi_0
+werkzeug=3.0.3=pypi_0
+whatthepatch=1.0.5=pypi_0
+wheel=0.41.2=py312hca03da5_0
+wrapt=1.16.0=pypi_0
+wurlitzer=3.0.3=pypi_0
+xz=5.4.6=h80987f9_0
+yapf=0.40.2=pypi_0
+zipp=3.17.0=pypi_0
+zlib=1.2.13=h5a0b063_0
+absl-py==2.1.0
+alabaster==0.7.16
+applaunchservices==0.3.0
+appnope==0.1.4
 arrow==1.3.0
-astroid==2.15.8
-asttokens==2.4.0
+astroid==3.0.3
+asttokens==2.4.1
 astunparse==1.6.3
 atomicwrites==1.4.1
-attrs==23.1.0
+attrs==23.2.0
+audioread==3.0.1
 autopep8==2.0.4
-Babel==2.13.1
-backcall==0.2.0
-bcrypt==4.0.1
-beautifulsoup4==4.12.2
+Babel==2.14.0
+beautifulsoup4==4.12.3
 binaryornot==0.4.4
-black==23.10.1
+black==24.2.0
 bleach==6.1.0
-blenderproc==2.7.0
-bpy==4.0.0
-cachetools==5.3.2
-certifi==2023.7.22
+certifi==2024.2.2
 cffi==1.16.0
 chardet==5.2.0
-charset-normalizer==3.3.0
+charset-normalizer==3.3.2
 click==8.1.7
 cloudpickle==3.0.0
-colorama==0.4.6
-comm==0.1.4
-contourpy==1.1.1
-cookiecutter==2.4.0
-cryptography==41.0.5
+comm==0.2.1
+contourpy==1.2.0
+cookiecutter==2.6.0
+cv==1.0.0
 cycler==0.12.1
-Cython==3.0.8
-debugpy==1.8.0
+debugpy==1.8.1
 decorator==5.1.1
 defusedxml==0.7.1
 diff-match-patch==20230430
-dill==0.3.7
-docker-pycreds==0.4.0
-docstring-to-markdown==0.13
+dill==0.3.8
+docstring-to-markdown==0.15
 docutils==0.20.1
-et-xmlfile==1.1.0
-exceptiongroup==1.1.3
-executing==2.0.0
-exrex==0.11.0
-fastjsonschema==2.18.1
-ffmpeg==1.4
-ffmpeg-python==0.2.0
+executing==2.0.1
+fastjsonschema==2.19.1
 filelock==3.13.1
-flake8==6.0.0
-flatbuffers==23.5.26
-fonttools==4.43.1
+flake8==7.0.0
+flatbuffers==24.3.25
+fonttools==4.49.0
 fsspec==2024.2.0
-future==0.18.3
 gast==0.5.4
-gitdb==4.0.11
-GitPython==3.1.41
-google-auth==2.23.3
-google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
-grpcio==1.59.0
-h5py==3.10.0
-idna==3.4
-imageio==2.33.0
+grpcio==1.63.0
+h5py==3.11.0
+idna==3.6
 imagesize==1.4.1
-importlib-metadata==6.8.0
+importlib_metadata==7.0.2
 inflection==0.5.1
 intervaltree==3.1.0
-ipykernel==6.26.0
-ipython==8.16.1
-ipython-genutils==0.2.0
-isort==5.12.0
-jaraco.classes==3.3.0
-jedi==0.18.2
-jellyfish==1.0.1
-Jinja2==3.1.2
-joblib==1.3.2
-jsonschema==4.19.1
-jsonschema-specifications==2023.7.1
-jupyter_client==8.5.0
-jupyter_core==5.4.0
-jupyterlab-pygments==0.2.2
-keras==2.14.0
-keyring==24.2.0
+ipykernel==6.29.3
+ipython==8.22.2
+isort==5.13.2
+jaraco.classes==3.3.1
+jedi==0.19.1
+jellyfish==1.0.3
+Jinja2==3.1.3
+joblib==1.4.2
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+jupyter_client==8.6.1
+jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
+keras==3.3.3
+keyring==24.3.1
 kiwisolver==1.4.5
-lazy-object-proxy==1.9.0
-lazy_loader==0.3
-libclang==16.0.6
-Markdown==3.5
+lazy_loader==0.4
+libclang==18.1.1
+librosa==0.10.2
+llvmlite==0.42.0
+Markdown==3.6
 markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-matplotlib==3.8.0
+MarkupSafe==2.1.5
+matplotlib==3.8.3
 matplotlib-inline==0.1.6
 mccabe==0.7.0
 mdurl==0.1.2
 mistune==3.0.2
-ml-dtypes==0.2.0
-more-itertools==10.1.0
+ml-dtypes==0.3.2
+more-itertools==10.2.0
 mpmath==1.3.0
+msgpack==1.0.8
 mypy-extensions==1.0.0
-nbclient==0.8.0
-nbconvert==7.9.2
+namex==0.0.8
+nbclient==0.9.0
+nbconvert==7.16.2
 nbformat==5.9.2
-nest-asyncio==1.5.8
+nest-asyncio==1.6.0
 networkx==3.2.1
-numpy==1.26.0
+numba==0.59.1
+numpy==1.26.4
 numpydoc==1.6.0
-oauthlib==3.2.2
-opencv-python==4.8.1.78
-openpyxl==3.0.10
+opencv-python==4.9.0.80
 opt-einsum==3.3.0
-packaging==23.2
-pafy==0.5.5
-pandas==2.1.1
-pandocfilters==1.5.0
-paramiko==3.3.1
+optree==0.11.0
+packaging==24.0
+pandas==2.2.1
+pandocfilters==1.5.1
 parso==0.8.3
-pathspec==0.11.2
-pathtools==0.1.2
-pexpect==4.8.0
+pathspec==0.12.1
+pexpect==4.9.0
 pickleshare==0.7.5
-Pillow==10.1.0
-platformdirs==3.11.0
-plotly==5.18.0
-pluggy==1.3.0
-progressbar==2.5
-prompt-toolkit==3.0.39
-protobuf==4.24.4
-psutil==5.9.6
+pillow==10.2.0
+platformdirs==4.2.0
+pluggy==1.4.0
+pooch==1.8.1
+prompt-toolkit==3.0.43
+protobuf==4.25.3
+psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
 py-cpuinfo==9.0.0
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycodestyle==2.10.0
-pycparser==2.21
+pycodestyle==2.11.1
+pycparser==2.22
 pydocstyle==6.3.0
-pyflakes==3.0.1
-Pygments==2.16.1
-pylint==2.17.7
+pyflakes==3.2.0
+Pygments==2.17.2
+pylint==3.0.4
 pylint-venv==3.0.3
 pyls-spyder==0.4.0
-PyNaCl==1.5.0
-pyparsing==3.1.1
+pyobjc-core==10.1
+pyobjc-framework-Cocoa==10.1
+pyobjc-framework-CoreServices==10.1
+pyobjc-framework-FSEvents==10.1
+pyparsing==3.1.2
 PyQt5==5.15.10
-PyQt5-Qt5==5.15.2
+PyQt5-Qt5==5.15.12
 PyQt5-sip==12.13.0
 PyQtWebEngine==5.15.6
-PyQtWebEngine-Qt5==5.15.2
-PySocks==1.7.1
-python-dateutil==2.8.2
-python-lsp-black==1.3.0
+PyQtWebEngine-Qt5==5.15.12
+python-dateutil==2.9.0.post0
+python-lsp-black==2.0.0
 python-lsp-jsonrpc==1.1.2
-python-lsp-server==1.7.4
-python-slugify==8.0.1
-pytoolconfig==1.2.6
-pytz==2023.3.post1
-pywin32==306
-pywin32-ctypes==0.2.2
+python-lsp-server==1.10.0
+python-slugify==8.0.4
+pytoolconfig==1.3.1
+pytz==2024.1
 PyYAML==6.0.1
-pyzmq==25.1.1
-QDarkStyle==3.1
+pyzmq==25.1.2
+QDarkStyle==3.2.3
 qstylizer==0.2.2
-QtAwesome==1.2.3
-qtconsole==5.4.4
+QtAwesome==1.3.0
+qtconsole==5.5.1
 QtPy==2.4.1
-referencing==0.30.2
+referencing==0.33.0
 requests==2.31.0
-requests-futures==1.0.1
-requests-oauthlib==1.3.1
-rich==13.6.0
-rope==1.10.0
-rpds-py==0.10.6
-rsa==4.9
-Rtree==1.1.0
-scikit-image==0.22.0
-scikit-learn==1.3.2
-scipy==1.11.3
+rich==13.7.1
+rope==1.12.0
+rpds-py==0.18.0
+Rtree==1.2.0
+scikit-learn==1.4.2
+scipy==1.12.0
 seaborn==0.13.2
-sentry-sdk==1.40.2
-setproctitle==1.3.3
+setuptools==68.2.2
 six==1.16.0
-sklearn==0.0.post10
-smmap==5.0.1
 snowballstemmer==2.2.0
 sortedcontainers==2.4.0
-sounddevice==0.4.6
 soundfile==0.12.1
 soupsieve==2.5
+soxr==0.3.7
 Sphinx==7.2.6
-sphinxcontrib-applehelp==1.0.7
-sphinxcontrib-devhelp==1.0.5
-sphinxcontrib-htmlhelp==2.0.4
+sphinxcontrib-applehelp==1.0.8
+sphinxcontrib-devhelp==1.0.6
+sphinxcontrib-htmlhelp==2.0.5
 sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.6
-sphinxcontrib-serializinghtml==1.1.9
-spyder==5.4.5
-spyder-kernels==2.4.4
+sphinxcontrib-qthelp==1.0.7
+sphinxcontrib-serializinghtml==1.1.10
+spyder==5.5.1
+spyder-kernels==2.5.1
 stack-data==0.6.3
-stem==1.8.2
 sympy==1.12
 tabulate==0.9.0
-tenacity==8.2.3
-tensorboard==2.14.1
+tensorboard==2.16.2
 tensorboard-data-server==0.7.2
-tensorflow==2.14.0
-tensorflow-estimator==2.14.0
-tensorflow-intel==2.14.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.3.0
+tensorflow==2.16.1
+termcolor==2.4.0
 text-unidecode==1.3
-textdistance==4.6.0
+textdistance==4.6.1
 thop==0.1.1.post2209072238
-threadpoolctl==3.2.0
+threadpoolctl==3.5.0
 three-merge==0.1.1
-tifffile==2023.9.26
 tinycss2==1.2.1
 tomli==2.0.1
-tomlkit==0.12.1
-torch==2.2.0
-torchvision==0.17.0
-tornado==6.3.3
-torrequest==0.1.0
-tqdm==4.66.1
-traitlets==5.12.0
-types-python-dateutil==2.8.19.14
-typing_extensions==4.8.0
-tzdata==2023.3
-ujson==5.8.0
-ultralytics==8.1.10
-urllib3==2.0.5
-watchdog==3.0.0
-wcwidth==0.2.8
+tomlkit==0.12.4
+torch==2.2.1
+torchvision==0.17.1
+tornado==6.4
+tqdm==4.66.2
+traitlets==5.14.2
+types-python-dateutil==2.8.19.20240311
+typing_extensions==4.10.0
+tzdata==2024.1
+ujson==5.9.0
+ultralytics==8.1.27
+urllib3==2.2.1
+watchdog==4.0.0
+wcwidth==0.2.13
 webencodings==0.5.1
-Werkzeug==3.0.1
+Werkzeug==3.0.3
 whatthepatch==1.0.5
-wrapt==1.14.1
+wheel==0.41.2
+wrapt==1.16.0
+wurlitzer==3.0.3
 yapf==0.40.2
-youtube-dl==2020.12.2
 zipp==3.17.0
-zstandard==0.22.0
